fixed the index problem that was messing up the removeAll method, thus halting the performance